--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -28,7 +28,7 @@
    
     <!-- FORMULÁRIO -->
 	<section>
-		<div class="container py-5" style="background-color: white">
+		<div class="container py-4" style="background-color: white">
 			<h3 class="display-4 text-center py-3">Inclusão de Novo Doador</h3>
 			<form method="post">
 				<div class="row" style="width: 100%; max-width: 820px; padding: 15px; margin: 0 auto">
@@ -108,12 +108,17 @@
 					<div class="col-md-12 py-3">
 						<div class="row">
 							
-							<div class="col-md-5">
+							<div class="col-md-4">
 								<label> CPF/CNPJ: </label>
 								<input class="form-control" placeholder="Inserir CPF/CNPJ" type="text" name="cpf_cnpj"/>
 							</div>
+														
+							<div class="col-md-4">
+								<label> Contato: </label>
+								<input class="form-control" placeholder="Inserir E-Mail ou Telefone" type="text" name="contato"/>
+							</div>
 							
-							<div class="col-md-5">
+							<div class="col-md-4">
 								<label> Tipo do Doador: </label>
 								<select class="custom-select" name="tipoDoador">
 									<option>Selecionar Tipo</option> 
@@ -121,11 +126,12 @@
 									<option value="Pessoa Jurídica">Pessoa Jurídica</option>
 								</select>
 							</div>
-							
-							<div class="col-md-2 text-right py-4">
-								<button class="btn btn-primary" type="submit">Adicionar</button>
-							</div>
+
 						</div>
+					</div>
+					
+					<div class="col-md-12 text-center py-3">
+						<button class="btn btn-primary" type="submit"><strong>INCLUIR DOADOR</strong></button>
 					</div>
 				</div>
 			</form>
