--- a/src/main/resources/templates/listaDoadores.html
+++ b/src/main/resources/templates/listaDoadores.html
@@ -34,6 +34,7 @@
 						   <tr>
 							  <th scope="col">Nome</th>
 							  <th scope="col">CPF/CNPJ</th>
+							  <th scope="col">Contato</th>
 							  <th scope="col">Data de Inclusão</th>
 							  <th scope="col">Alterar</th>
 							  <th scope="col">Deletar</th>
@@ -43,6 +44,7 @@
 						   <tr th:each="doador : ${doadores}">
 							  <td><a th:href="${(#mvc.url('DC#detalhesDoador').arg(0, doador.idDoador)).build()}"><span th:text="${doador.nomeDoador}"></span></a></td>
 							  <td><span th:text="${doador.cpf_cnpj}"></span></td>
+							  <td><span th:text="${doador.contato}"></span></td>
 							  <td><span th:text="${doador.data}"></span></td>
 							  <td><i class="fas fa-pen"></i></td>
 							  <td><a th:href="${(#mvc.url('DC#deletarDoador').arg(0, doador.idDoador)).build()}"><i class="fas fa-trash"></i></a></td>
