--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -115,7 +115,7 @@
 														
 							<div class="col-md-4">
 								<label> Contato: </label>
-								<input class="form-control" placeholder="Inserir E-Mail ou Telefone" type="text" name="contato"/>
+								<input class="form-control" placeholder="Inserir Telefone" type="text" name="contato"/>
 							</div>
 							
 							<div class="col-md-4">
@@ -131,7 +131,7 @@
 					</div>
 					
 					<div class="col-md-12 text-center py-3">
-						<button class="btn btn-primary" type="submit"><strong>INCLUIR DOADOR</strong></button>
+						<button class="btn btn-primary" type="submit">Incluir Doador</button>
 					</div>
 				</div>
 			</form>
